upload css fixes, proccess spacing and style

--- a/Cloudents.Web/ClientApp/components/preview/headerDocument.less
+++ b/Cloudents.Web/ClientApp/components/preview/headerDocument.less
@@ -36,7 +36,7 @@
           }
         }
         .date {
-          color: @borderGreyColor;
+          color: @colorGreyLight;
 
         }
       }
@@ -131,7 +131,7 @@
                 color: @colorBlackNew;
               }
               .icon{
-                color: @borderGreyColor;
+                color: @colorGreyLight;
                 font-size: 16px;
                 &.views-icon{
                   font-size: 18px;
